# Projeto_Rotatividade_Funcionarios

./: README.md  pyproject.toml
Code/: analise.ipynb  config.py  simulacao_producao.ipynb
Data/: Analise_Rotatividade.xlsx  previsoes_desligamentos.xlsx
